# MCP_Server

./: .gitignore  .npmignore  .npmrc  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  LICENSE  NPM_2FA_FIX.md  NPM_PUBLISH_GUIDE.md  NPM_TOKEN_GUIDE.md  README.md  SKILL_USAGE_GUIDE.md  UPDATE_GUIDE.md  interactive_client.py  package.json  pyproject.toml  requirements.txt  test_config.py
.github/workflows/: publish.yml
config/: CONFIG_EXAMPLE.md  config.example.json
docs/: PROJECT_SUMMARY.md  QUICKSTART.md  VNC_CONTROL_GUIDE.md  usage.md
skill/qvmconsole-vm-management/: SKILL.md
src/: __init__.py  client.py  config.py  server.py  test_connection.py  tools.py  vnc_controller.py
src/docs/: developer-guide.md
tests/: check_switches.py  test_list_switches.py
